--- a/src/components/map/sidebar.css
+++ b/src/components/map/sidebar.css
@@ -1,11 +1,12 @@
 .sidebar {
-    position: fixed;
-    top: 0;
-    right: 0;
+    /* position: fixed; */
+    /* top: 0;
+    right: 0; */
     overflow-y: auto;
-    background-color: #b4b0b027;
+    background-color: white;
     width: 100px;
     height: 100vh;
+    /* box-shadow: 10px 10px 10px #333; */
 
     /* width: 100%;
     height: 100%; */
@@ -17,4 +18,18 @@
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+.toggle-button {
+    padding: 0;
+    margin-top: 1rem;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    background-color: white;
+}
+
+.toggle-button img {
+    width: 50px;
+    height: 50px;
 }
