--- a/src/components/map/sidebar.css
+++ b/src/components/map/sidebar.css
@@ -1,15 +1,13 @@
 .sidebar {
-    /* position: fixed; */
-    /* top: 0;
-    right: 0; */
+    position: fixed;
+    top: 0;
+    right: 0;
     overflow-y: auto;
     background-color: white;
     width: 100px;
     height: 100vh;
-    /* box-shadow: 10px 10px 10px #333; */
-
-    /* width: 100%;
-    height: 100%; */
+    box-shadow: -5px 2px 15px -2px #333;
+    opacity: 0.8;
 }
 
 .sidebar ul {
@@ -32,4 +30,5 @@
 .toggle-button img {
     width: 50px;
     height: 50px;
+    pointer-events: none;
 }
