--- a/src/components/map/olMap.css
+++ b/src/components/map/olMap.css
@@ -4,3 +4,12 @@
     width: 100%;
     height: 100%;
 }
+
+.bus-stop-overlay {
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.5rem;
+    opacity: 0.8;
+    width: 100%;
+    height: 20px;
+    background-color: white;
+}
