--- a/src/components/map/sidebar.css
+++ b/src/components/map/sidebar.css
@@ -6,25 +6,34 @@
     background-color: white;
     width: 100px;
     height: 100vh;
-    box-shadow: -5px 2px 15px -2px #333;
+    box-shadow: -10px 2px 30px -2px #8f8787;
     opacity: 0.8;
 }
 
-.sidebar ul {
+ul {
     display: flex;
     flex-direction: column;
     list-style: none;
-    margin: 0;
+    margin: 2rem 0 0 0;
     padding: 0;
 }
 
-.toggle-button {
-    padding: 0;
-    margin-top: 1rem;
+li {
+    border-bottom: 1px solid rgb(177, 174, 174);
+    margin-bottom: 1rem;
     width: 100%;
+    height: 2rem;
+    flex-grow: 1;
+}
+
+.toggle-button {
+    width: 100%;
+    height: 100%;
     border: none;
     cursor: pointer;
     background-color: white;
+    user-select: none;
+    flex-grow: 1;
 }
 
 .toggle-button img {
