--- a/src/components/map/olMap.css
+++ b/src/components/map/olMap.css
@@ -4,3 +4,12 @@
     width: 100%;
     height: 100%;
 }
+
+.info-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    padding: 0.5rem 0.2rem;
+    opacity: 0.7;
+    border-radius: 0.5rem;
+}
