--- a/src/components/map/sidebar.css
+++ b/src/components/map/sidebar.css
@@ -40,6 +40,7 @@ li {
     flex-grow: 1;
     color: black;
     box-shadow: 2px 2px 15px 2px rgba(34, 34, 163, 0.553);
+    font-weight: 600;
 }
 
 .toggle-button img {
